# nca

./: AGENTS.md  Cargo.toml  Makefile  install.sh
.cursor/rules/: rust-native-architecture.mdc
.github/workflows/: ci.yml  release.yml
crates/autoresearch/: Cargo.toml
crates/autoresearch/src/: experiment.rs  git_integration.rs  lib.rs  loop_runner.rs  metric_parser.rs  program.rs  result.rs
crates/cli/: Cargo.toml
crates/cli/src/: approval_prompts.rs  cli_index.rs  file_mentions.rs  image_attach.rs  ipc_pending.rs  main.rs  prompt.rs  repl.rs  runner.rs  slash_commands.rs  stream.rs
crates/cli/src/tui/: app.rs  bridge.rs  busy_indicator.rs  connect_modal.rs  mod.rs  onboarding.rs  replay.rs  state.rs  todos.rs
crates/cli/tests/: cli_commands.rs
crates/common/: Cargo.toml
crates/common/src/: config.rs  event.rs  lib.rs  message.rs  model_caps.rs  session.rs
crates/core/: Cargo.toml
crates/core/src/: agent.rs  approval.rs  code_intel.rs  harness.rs  lib.rs  provider.rs  skill_installer.rs  skills.rs
crates/core/src/provider/: anthropic.rs  anthropic_compat.rs  minimax.rs  minimax_vlm.rs  openai.rs  openai_compat.rs  openrouter.rs  validate.rs
crates/core/src/tools/: apply_patch.rs  ask_question.rs  code_intel_tool.rs  edit_file.rs  invoke_skill.rs  mod.rs  replace_match.rs  search.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: context_manager.rs  ipc.rs  last_session.rs  lib.rs  model_limits.rs  model_limits_api.rs  service.rs  session_store.rs  supervisor.rs  worktree.rs
docs/: architecture.md  autoresearch-plan.md  branch-chip-plan.md  cli-terminal-fonts.md  context-management.md  orchestration.md  prd.md  tech-stack.md  todo.md  tui-command-sidebar-plan.md
docs/documentation/: advanced.md  commands.md  configuration.md  getting-started.md  index.md  interactive-mode.md  permissions.md  providers.md  sessions.md  skills.md  tools.md
docs/plans/: agents-md-skills.md  cli-tui-opencode-parity.md  file-mention-preview-compaction.md  minimax-native-image-input.md  tui-mention-chip-ux.md  tui-mention-enter-selection.md
docs/research/: cli-dx-autoresearch.md  cli-dx-research.md  rust-ratatui-optimization.md
docs/superpowers/plans/: 2026-03-24-invoke-skill-tool.md  2026-03-24-question-modal-picker.md  2026-03-24-skill-supporting-files.md
docs/superpowers/specs/: 2026-03-24-invoke-skill-tool-design.md  2026-03-24-question-modal-picker-design.md  2026-03-24-skill-supporting-files-design.md  2026-03-24-subagent-skill-indicator-design.md
