[package]
name = "nca-autoresearch"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Autonomous research loop for nca — AI agents running experiments iteratively"

[dependencies]
nca-common = { workspace = true }

# Async runtime
tokio = { workspace = true, features = ["process", "time", "sync", "fs"] }

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
toml = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Async utilities
futures-util = "0.3"

# Regex for metric parsing
regex = "1"

# Tracing/logging
tracing = { workspace = true }

# Async trait
async-trait = "0.1"

# Parking lot for efficient synchronization
parking_lot = "0.12"

[dev-dependencies]
tempfile = "3"
